# rust-utils

./: Cargo.toml
conversion/: Cargo.toml  README.md
conversion/src/: allocs.rs  element.rs  hash.rs  lib.rs  option.rs  result.rs  vec.rs  wrapper.rs
macros/: Cargo.toml
macros/src/: enums.rs  lib.rs
