[package]
name = "sai-conversion"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Ergonomic conversion helpers for Result and Vec types"
readme = "README.md"

[lints]
workspace = true

[dependencies]
hashbrown = { version = "0.17", optional = true }

[features]
default = ["option", "result", "vec", "hash"]
option = []
result = []
vec = []
hash = ["hashbrown"]
