[package]
name = "sai-conversion"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Ergonomic conversion helpers for Option, Result, Vec, HashMap, HashSet, and iterators"
readme = "README.md"

[lints]
workspace = true

[dependencies]


[features]
default = ["std", "hash"]
alloc = []
std = ["alloc"]
hash = []
